--- a/LiquorBarn.Data/LiquorBarn.Data.csproj
+++ b/LiquorBarn.Data/LiquorBarn.Data.csproj
@@ -87,8 +87,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cocktail.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Junction.cs" />
+    <Compile Include="Liquor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecificLiquor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
