--- a/LiquorBarn.Services/LiquorBarn.Services.csproj
+++ b/LiquorBarn.Services/LiquorBarn.Services.csproj
@@ -57,11 +57,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CocktailService.cs" />
+    <Compile Include="LiquorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LiquorBarn.Data\LiquorBarn.Data.csproj">
+      <Project>{89a56205-d446-43a1-b7a3-7613b85b7fa2}</Project>
+      <Name>LiquorBarn.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LiquorBarn.Models\LiquorBarn.Models.csproj">
+      <Project>{a1dff763-6f45-4b1a-960d-6625fab1c7e2}</Project>
+      <Name>LiquorBarn.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
