--- a/LiquorBarn.Services/LiquorBarn.Services.csproj
+++ b/LiquorBarn.Services/LiquorBarn.Services.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CocktailLiquorService.cs" />
     <Compile Include="CocktailService.cs" />
     <Compile Include="LiquorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
