--- a/LiquorBarn.Data/LiquorBarn.Data.csproj
+++ b/LiquorBarn.Data/LiquorBarn.Data.csproj
@@ -95,6 +95,10 @@
     <Compile Include="Migrations\202009081508224_InitialMigration.designer.cs">
       <DependentUpon>202009081508224_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009082056146_AddedServiceGetAllLiquors.cs" />
+    <Compile Include="Migrations\202009082056146_AddedServiceGetAllLiquors.designer.cs">
+      <DependentUpon>202009082056146_AddedServiceGetAllLiquors.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecificLiquor.cs" />
@@ -106,6 +110,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202009081508224_InitialMigration.resx">
       <DependentUpon>202009081508224_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009082056146_AddedServiceGetAllLiquors.resx">
+      <DependentUpon>202009082056146_AddedServiceGetAllLiquors.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
