--- a/LiquorBarn.Models/LiquorBarn.Models.csproj
+++ b/LiquorBarn.Models/LiquorBarn.Models.csproj
@@ -61,6 +61,8 @@
     <Compile Include="CocktailLiquorDetail.cs" />
     <Compile Include="CocktailListItem.cs" />
     <Compile Include="LiquorCreate.cs" />
+    <Compile Include="LiquorDetail.cs" />
+    <Compile Include="LiquorListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
