--- a/LiquorBarn.Data/LiquorBarn.Data.csproj
+++ b/LiquorBarn.Data/LiquorBarn.Data.csproj
@@ -95,9 +95,14 @@
     <Compile Include="Migrations\202009091433496_InitialMigration.designer.cs">
       <DependentUpon>202009091433496_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009141412169_SecondMigration.cs" />
+    <Compile Include="Migrations\202009141412169_SecondMigration.designer.cs">
+      <DependentUpon>202009141412169_SecondMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecificLiquor.cs" />
+    <Compile Include="UserCocktail.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -106,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202009091433496_InitialMigration.resx">
       <DependentUpon>202009091433496_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009141412169_SecondMigration.resx">
+      <DependentUpon>202009141412169_SecondMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
