--- a/LiquorBarn.Models/LiquorBarn.Models.csproj
+++ b/LiquorBarn.Models/LiquorBarn.Models.csproj
@@ -64,6 +64,7 @@
     <Compile Include="LiquorDetail.cs" />
     <Compile Include="LiquorListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserCocktailDetail.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
