--- a/LiquorBarn.Services/LiquorBarn.Services.csproj
+++ b/LiquorBarn.Services/LiquorBarn.Services.csproj
@@ -61,6 +61,7 @@
     <Compile Include="CocktailService.cs" />
     <Compile Include="LiquorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PreferenceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
