--- a/LiquorBarn/LiquorBarn.WebAPI.csproj
+++ b/LiquorBarn/LiquorBarn.WebAPI.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\CocktailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LiquorController.cs" />
+    <Compile Include="Controllers\PreferenceController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
