--- a/LiquorBarn.Services/LiquorBarn.Services.csproj
+++ b/LiquorBarn.Services/LiquorBarn.Services.csproj
@@ -62,6 +62,7 @@
     <Compile Include="LiquorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PreferenceService.cs" />
+    <Compile Include="SpecificLiquorService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
