--- a/LiquorBarn.Services/LiquorBarn.Services.csproj
+++ b/LiquorBarn.Services/LiquorBarn.Services.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="CocktailLiquorService.cs" />
     <Compile Include="CocktailService.cs" />
+    <Compile Include="CustomCocktailService.cs" />
     <Compile Include="LiquorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PreferenceService.cs" />
